# RTD

./: CMakeLists.txt  README.md
include/: sdl.h  system.h
src/: main.c  sdl.c  system.c
